<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_SetPhaseUpperAxisPosition" Id="{9063ae89-4960-4401-841c-c79b07de8545}" SpecialFunc="None">
    <Declaration><![CDATA[(****************************************************************
NAME:			FB_SetPhaseUpperAxisPosition
DATA:			2022.10.18
VERSION:		1.0.0
DESCRIPTION:	FB_SetPhaseUpperAxisPosition
HISTORY:
				2022.10.18		NEW

***************************************************************)
FUNCTION_BLOCK FB_SetPhaseUpperAxisPosition
VAR_INPUT
	ValueSet:LREAL:=0;
	Execute:BOOL;
END_VAR
VAR_OUTPUT
	FbID:DINT:=1001;
	State:DINT;
	Busy:BOOL;
	Done:BOOL;
	Error:BOOL;
	ErrorID:DINT;
END_VAR
VAR
	PhaseUpperLin_MC_SetPosition: MC_SetPosition;
	fb_ton: TON;
	FB_PlcEmergencyStop: FB_PlcEmergencyStop;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF Execute THEN
Busy:=TRUE;
Done:=FALSE;
fb_ton(PT:=t#0.1s);
CASE State OF
	0:
		IF PhaseUpperLin_MC_SetPosition.Error THEN		(*FB Error*)
			ErrorID:=1;
			State:=99;
		ELSE
			State:=1;
		END_IF
	1:	(*Execute*)
		PhaseUpperLin_MC_SetPosition.Position:=ValueSet;
		PhaseUpperLin_MC_SetPosition.Execute:=TRUE;
		A_SetPhaseUpperPositionMC();
		fb_ton.IN:=TRUE;
		State:=2;
	2:	(*Wait*)
		A_SetPhaseUpperPositionMC();
		IF NOT PhaseUpperLin_MC_SetPosition.Done THEN		
			IF NOT fb_ton.Q THEN
				State:=2;
			ELSE
				ErrorID:=4;
				State:=99;
			END_IF
		ELSIF  PhaseUpperLin_MC_SetPosition.Done THEN	
			State:=88;
		ELSE
			ErrorID:=5;
			State:=99;
		END_IF
	88:
		Execute:=FALSE;
		State:=0;
		Busy:=FALSE;
		Done:=TRUE;
		Error:=FALSE;
		ErrorID:=0;
		PhaseUpperLin_MC_SetPosition.Execute:=FALSE;
		fb_ton.IN:=FALSE;
	99:
		Execute:=FALSE;
		State:=99;
		Busy:=FALSE;
		Done:=FALSE;
		Error:=TRUE;
		PhaseUpperLin_MC_SetPosition.Execute:=FALSE;
		fb_ton.IN:=FALSE;
	-100:
		FB_PlcEmergencyStop();
		Execute:=FALSE;
		State:=-100;
		Busy:=FALSE;
		Done:=FALSE;
		Error:=TRUE;
		PhaseUpperLin_MC_SetPosition.Execute:=FALSE;
		fb_ton.IN:=FALSE;
END_CASE
END_IF]]></ST>
    </Implementation>
    <Action Name="A_SetPhaseUpperPositionMC" Id="{362dde97-a54d-4198-8a53-3292d52617ea}">
      <Implementation>
        <NWL>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="NWLImplementationObject">
                <v n="NetworkListComment">""</v>
                <v n="DefaultViewMode">"Fbd"</v>
                <l2 n="NetworkList" cet="Network">
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeBox">
                      <o>
                        <v n="BoxType">"MC_SetPosition"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"PhaseUpperLin_MC_SetPosition"</v>
                          <v n="Type">"MC_SetPosition"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">2L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">4L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">5L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">6L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">8L</v>
                            </o>
                            <v n="Id">7L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">10L</v>
                            </o>
                            <v n="Id">9L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">12L</v>
                            </o>
                            <v n="Id">11L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">14L</v>
                            </o>
                            <v n="Id">13L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"PhaseUpperLin"</v>
                              <v n="Type">"axis_ref"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">16L</v>
                            </o>
                            <v n="Id">15L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Execute</v>
                            <v>Position</v>
                            <v>Mode</v>
                            <v>Options</v>
                            <v>Axis</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>LREAL</v>
                            <v>BOOL</v>
                            <v>ST_SetPositionOptions</v>
                            <v>AXIS_REF (VAR_IN_OUT)</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>Done</v>
                            <v>Busy</v>
                            <v>Error</v>
                            <v>ErrorID</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>UDINT</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <n n="EN" />
                        <n n="ENO" />
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">3L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">1L</v>
                  </o>
                </l2>
                <v n="BranchCounter">0</v>
                <v n="ValidIds">true</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
              <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
              <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
              <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
              <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
              <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
              <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
              <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </NWL>
      </Implementation>
    </Action>
    <LineIds Name="FB_SetPhaseUpperAxisPosition">
      <LineId Id="177" Count="6" />
      <LineId Id="185" Count="1" />
      <LineId Id="193" Count="0" />
      <LineId Id="195" Count="3" />
      <LineId Id="205" Count="6" />
      <LineId Id="213" Count="6" />
      <LineId Id="221" Count="12" />
      <LineId Id="237" Count="7" />
      <LineId Id="248" Count="8" />
      <LineId Id="260" Count="1" />
      <LineId Id="116" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>